--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -65,74 +65,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wms_company_id</th>\n",
-       "      <th>wms_company_name</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>wms_warehouse_name</th>\n",
-       "      <th>lpn</th>\n",
-       "      <th>sku_code</th>\n",
-       "      <th>sku_name</th>\n",
-       "      <th>sku_desc</th>\n",
-       "      <th>product_status</th>\n",
-       "      <th>batch_number</th>\n",
-       "      <th>...</th>\n",
-       "      <th>lock_codes</th>\n",
-       "      <th>create_date</th>\n",
-       "      <th>last_modified_date</th>\n",
-       "      <th>data_source</th>\n",
-       "      <th>manufactured_date</th>\n",
-       "      <th>expiration_date</th>\n",
-       "      <th>ou_code</th>\n",
-       "      <th>usage_flag</th>\n",
-       "      <th>inc_day</th>\n",
-       "      <th>src</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>0 rows × 34 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [wms_company_id, wms_company_name, wms_warehouse_id, wms_warehouse_name, lpn, sku_code, sku_name, sku_desc, product_status, batch_number, inventory_status, location, location_zone, location_class, location_type, location_status, container_id, product_group, product_type, allocated_qty, on_hand_qty, in_transit_qty, shelf_days, recived_date, lock_codes, create_date, last_modified_date, data_source, manufactured_date, expiration_date, ou_code, usage_flag, inc_day, src]\n",
-       "Index: []\n",
-       "\n",
-       "[0 rows x 34 columns]"
+       "0      20210101\n",
+       "1      20210108\n",
+       "2      20210115\n",
+       "3      20210122\n",
+       "4      20210129\n",
+       "         ...   \n",
+       "100    20221202\n",
+       "101    20221209\n",
+       "102    20221216\n",
+       "103    20221223\n",
+       "104    20221230\n",
+       "Length: 105, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['ou_code'] == 'COSTASHHTS']"
+    "allsundays(2021)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
+      "    where src = 'scale'\n",
+      "    and ou_code in (\n",
+      "    'HPPXXWHWDS', \n",
+      "    'MICHETCTGS'\n",
+      "    'COSTASHHTS',\n",
+      "    'ZEBRASHALS'\n",
+      "    )\n",
+      "    and inc_day in ('20211022', '20211029', '20211105', '20211112', '20211119', '20211126', '20211203', '20211210')\n",
+      "    and usage_flag = '1'\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "fridays = tuple([i for i in list(allsundays(2021)[allsundays(2021) < date.today().strftime('%Y%m%d')][-8:])])\n",
+    "\n",
+    "\n",
+    "sql = \"\"\"\n",
+    "    select * from  dsc_dwd.dwd_wh_dsc_inventory_dtl_di \n",
+    "    where src = 'scale'\n",
+    "    and ou_code in (\n",
+    "    'HPPXXWHWDS', \n",
+    "    'MICHETCTGS'\n",
+    "    'COSTASHHTS',\n",
+    "    'ZEBRASHALS'\n",
+    "    )\n",
+    "    and inc_day in \"\"\"+ str(fridays) + \"\"\"\n",
+    "    and usage_flag = '1'\n",
+    "    \"\"\"\n",
+    "print(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date, timedelta\n",
+    "\n",
+    "def allsundays(year):\n",
+    "    return pd.Series(pd.date_range(start=str(year), end=str(year+2), \n",
+    "                        freq='W-FRI').strftime('%Y%m%d'))"
    ]
   },
   {
