--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['inv_1220.csv', 'inv_7.csv', 'inv_7_2.csv']\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -34,9 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.13 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df = pd.read_csv('./data_down/inv_1220.csv', sep='\\001')\n",
@@ -49,23 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df9"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import date, timedelta\n",
     "\n",
     "def allsundays(year):\n",
-    "    return pd.Series(pd.date_range(start=str(year), end=str(year+2), \n",
+    "    return pd.Series(pd.date_range(start=str(year), end=str(year+12), \n",
     "                        freq='W-FRI').strftime('%Y%m%d'))\n",
     "fridays = tuple([i for i in list(allsundays(2021)[allsundays(2021) < date.today().strftime('%Y%m%d')][-8:])])\n",
     "\n",
@@ -87,91 +94,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "code = ''\n",
-    "def load_data(ou_code):\n",
-    "        \"\"\"\n",
-    "        load bose data;\n",
-    "        所有类型的qty都要加起来哦\n",
-    "        只选择有多个收货日期的货物\n",
-    "        \"\"\"\n",
-    "        global code\n",
-    "        df = df9\n",
-    "        df = df[df['ou_code'].astype(str) == ou_code]\n",
-    "\n",
-    "        def fifo_fefo(df, type):\n",
-    "            if type == 'fifo':\n",
-    "                df['recived_date'] = pd.to_datetime(df['recived_date'])\n",
-    "                df['fifo_fefo'] = 'fifo'\n",
-    "            elif type == 'fefo':\n",
-    "                df['recived_date'] = pd.to_datetime(df['expiration_date'].str.slice(0,10))\n",
-    "                df['fifo_fefo'] = 'fefo'\n",
-    "            else: \n",
-    "                pass\n",
-    "            return df \n",
-    "\n",
-    "        if ou_code == 'HPPXXWHWDS':\n",
-    "            # hp wh\n",
-    "            code = '(QH|27|QI)'\n",
-    "            df = fifo_fefo(df, 'fifo')\n",
-    "\n",
-    "        elif ou_code == 'MICHETCTGS':\n",
-    "            df = df[df['expiration_date'] != '4712-12-31']\n",
-    "            # mich tc, rt,m  FEFO\n",
-    "            df = fifo_fefo(df, 'fefo')\n",
-    "\n",
-    "        elif ou_code == 'COSTASHHTS':\n",
-    "            # COSTASHHTS expiration_date 没有空值.\n",
-    "            df1 = df[df['expiration_date'] == '4712-12-31'] # fifo\n",
-    "            df2 = df[df['expiration_date'] != '4712-12-31'] # fefo\n",
-    "            df1 = fifo_fefo(df1, 'fifo')\n",
-    "            df2 = fifo_fefo(df2, 'fefo')\n",
-    "            df = pd.concat([df1, df2], axis = 0)\n",
-    "\n",
-    "        elif ou_code == 'SIEMESUEPS':\n",
-    "            pass\n",
-    "\n",
-    "        # print(code)\n",
-    "        print('{note:=>50}'.format(note=code) + '{note:=>50}'.format(note=''))\n",
-    "\n",
-    "        print(\"===============================this_code: %s=================================\"%code)\n",
-    "        \n",
-    "        \n",
-    "        df = df[['wms_company_name', 'wms_warehouse_id','sku_code', 'sku_name', 'sku_desc', 'location',\\\n",
-    "            'lock_codes', 'on_hand_qty', 'in_transit_qty','allocated_qty', 'shelf_days', \n",
-    "            'recived_date','usage_flag', 'fifo_fefo','inc_day']]\n",
-    "        df['qty'] = df['on_hand_qty']\n",
-    "        \n",
-    "        \n",
-    "        # 没有重复的 目前看....aaa\n",
-    "        df = df.groupby(\n",
-    "            ['recived_date', 'sku_code', 'lock_codes','inc_day', 'wms_warehouse_id', 'fifo_fefo'],\n",
-    "            dropna = False\n",
-    "            ).agg(\n",
-    "        {\n",
-    "            'qty':sum,\n",
-    "            'location': set\n",
-    "        }\n",
-    "        ).sort_values(['sku_code', 'recived_date']).reset_index()\n",
-    "        # 只选择有多个收货日期的货物\n",
-    "        filter0 = df.groupby(['sku_code'])['recived_date'].agg(\n",
-    "        {\n",
-    "            set\n",
-    "        }\n",
-    "            ).reset_index()\n",
-    "\n",
-    "        filter0 = pd.DataFrame(filter0[filter0['set'].apply(len)> 1]['sku_code'].drop_duplicates())\n",
-    "        bose_inv = filter0.merge(df, on = ['sku_code'], how = 'inner')\\\n",
-    "            .sort_values(['recived_date','sku_code', 'inc_day'])\n",
-    "        bose_inv['ou_code'] = ou_code\n",
-    "        \n",
-    "        return bose_inv\n",
     "\n",
     "df0 = pd.DataFrame()\n",
     "scan_len = len(df['inc_day'].unique())  \n",
+    "\n",
+    "def load_data(ou_code):\n",
+    "    \"\"\"\n",
+    "    load bose data;\n",
+    "    所有类型的qty都要加起来哦\n",
+    "    只选择有多个收货日期的货物\n",
+    "    \"\"\"\n",
+    "    global code,df\n",
+    "    df = df9\n",
+    "    df = df[df['ou_code'].astype(str) == ou_code]\n",
+    "\n",
+    "    def fifo_fefo(df, type):\n",
+    "        if type == 'fifo':\n",
+    "            df['recived_date'] = pd.to_datetime(df['recived_date'])\n",
+    "            df['fifo_fefo'] = 'fifo'\n",
+    "        elif type == 'fefo':\n",
+    "            df['recived_date'] = pd.to_datetime(df['expiration_date'].str.slice(0,10))\n",
+    "            df['fifo_fefo'] = 'fefo'\n",
+    "        else: \n",
+    "            pass\n",
+    "        return df \n",
+    "\n",
+    "    if ou_code == 'HPPXXWHWDS':\n",
+    "        # hp wh\n",
+    "        code = '(QH|27|QI)'\n",
+    "        df = fifo_fefo(df, 'fifo')\n",
+    "\n",
+    "    elif ou_code == 'MICHETCTGS':\n",
+    "        df = df[df['expiration_date'] != '4712-12-31']\n",
+    "        # mich tc, rt,m  FEFO\n",
+    "        code = '(BLOCKED_TH|RETURN)'\n",
+    "        df = fifo_fefo(df, 'fefo')\n",
+    "\n",
+    "    elif ou_code == 'COSTASHHTS':\n",
+    "        # COSTASHHTS expiration_date 没有空值.\n",
+    "        df1 = df[df['expiration_date'] == '4712-12-31'] # fifo\n",
+    "        df2 = df[df['expiration_date'] != '4712-12-31'] # fefo\n",
+    "        df1 = fifo_fefo(df1, 'fifo')\n",
+    "        df2 = fifo_fefo(df2, 'fefo')\n",
+    "        df = pd.concat([df1, df2], axis = 0)\n",
+    "        code = '(blocked)'\n",
+    "\n",
+    "    elif ou_code == 'SIEMESUEPS':\n",
+    "        pass\n",
+    "\n",
+    "    # print(code)\n",
+    "    print('{note:=>50}'.format(note=code) + '{note:=>50}'.format(note=''))\n",
+    "\n",
+    "    print(\"===============================this_code: %s=================================\"%code)\n",
+    "    \n",
+    "    \n",
+    "    df = df[['wms_company_name', 'wms_warehouse_id','sku_code', 'sku_name', 'sku_desc', 'location',\\\n",
+    "        'lock_codes', 'on_hand_qty', 'in_transit_qty','allocated_qty', 'shelf_days', \n",
+    "        'recived_date','usage_flag', 'fifo_fefo','inc_day']]\n",
+    "    df['qty'] = df['on_hand_qty']\n",
+    "    \n",
+    "    \n",
+    "    # 没有重复的 目前看....aaa\n",
+    "    df = df.groupby(\n",
+    "        ['recived_date', 'sku_code', 'lock_codes','inc_day', 'wms_warehouse_id', 'fifo_fefo'],\n",
+    "        dropna = False\n",
+    "        ).agg(\n",
+    "    {\n",
+    "        'qty':sum,\n",
+    "        'location': set\n",
+    "    }\n",
+    "    ).sort_values(['sku_code', 'recived_date']).reset_index()\n",
+    "    # 只选择有多个收货日期的货物\n",
+    "    filter0 = df.groupby(['sku_code'])['recived_date'].agg(\n",
+    "    {\n",
+    "        set\n",
+    "    }\n",
+    "        ).reset_index()\n",
+    "\n",
+    "    filter0 = pd.DataFrame(filter0[filter0['set'].apply(len)> 1]['sku_code'].drop_duplicates())\n",
+    "    bose_inv = filter0.merge(df, on = ['sku_code'], how = 'inner')\\\n",
+    "        .sort_values(['recived_date','sku_code', 'inc_day'])\n",
+    "    bose_inv['ou_code'] = ou_code\n",
+    "    \n",
+    "    return bose_inv\n",
+    "\n",
     "\n",
     "def snapshot():\n",
     "    \"\"\"\n",
@@ -205,30 +216,67 @@
     "    df0 = df0.merge(bose_inv, on = ['sku','received_date'], how = 'left')\n",
     "\n",
     "    # may lock\n",
-    "    df0['mark'] = df0['mark'].where(df0.iloc[:, 0:scan_len].fillna(0).nunique(axis = 1) > 1, 'may_lock')\n"
+    "    df0['mark'] = df0['mark'].where(df0.iloc[:, 0:scan_len].fillna(0).nunique(axis = 1) > 1, 'may_lock')\n",
+    "    \n",
+    "def err_part():\n",
+    "    \"\"\"\n",
+    "    findout who are the naught peach.\n",
+    "    err 中干掉了 new 干掉了maylock \n",
+    "    \"\"\"\n",
+    "    df_err = df0[df0['mark'] != 'new']\n",
+    "    # 补充可能被锁的标记\n",
+    "    # df_err['mark'] = df_err['mark'].where(df_err.iloc[:, 0:8].fillna(0).nunique(axis = 1) > 1, 'may_lock')\n",
+    "    # 干掉了maylock\n",
+    "    df_err = df_err[df_err['mark'] != 'may_lock'].sort_values(['sku', 'received_date'])\n",
+    "    df_err['change'] = df_err.iloc[:,0:scan_len].diff(axis = 1).sum(axis = 1)\n",
+    "    shift = df_err.groupby(['sku', 'wms_warehouse_id']).shift(1) \n",
+    "    shift = shift[['mark','change']]\n",
+    "    shift.columns = ['lag_mark', 'lag_change']\n",
+    "    shift['lag_mark'] = shift['lag_mark'].where(~shift['lag_mark'].isna(), 'clear')\n",
+    "    df_err = pd.concat([df_err, shift], axis = 1)\n",
+    "    return df_err\n",
+    "def output(df_err, df0):\n",
+    "    dishes = list(df_err[(df_err['lag_mark'] != 'clear') \\\n",
+    "        & (df_err['change'] < 0)\n",
+    "        & (df_err['change'] != df_err['lag_change'])]['sku'].unique())\n",
+    "    return df0[df0['sku'].isin(dishes)]\n",
+    "\n",
+    "def check(sku, df0):\n",
+    "    a = df0[df0['sku'].isin(sku)].sort_values(['sku','received_date'])\n",
+    "    return a \n",
+    "\n",
+    "def ou_level_lock_codes(lock_code_to_eliminate):\n",
+    "    \"\"\"\n",
+    "    正则. lock_code 需要被排除的, 依赖view表格. \n",
+    "    \"\"\"\n",
+    "    # output(df_err_bose,df0_bose)['sku'].unique()\n",
+    "    select_none_lock  = pd.DataFrame(\n",
+    "        view.groupby('sku')['mark'].apply(list).astype(str).str.match('.+may')\n",
+    "        ).reset_index()\n",
+    "    select_none_lock2 = pd.DataFrame(\n",
+    "        view.groupby('sku')['lock_codes'].apply(list).astype(str).str.match('.+'+lock_code_to_eliminate)\n",
+    "        ).reset_index()\n",
+    "    # 去重    \n",
+    "    bose_err_list = set(select_none_lock[~select_none_lock['mark']]['sku'].unique())\n",
+    "    bose_err_list2 = list(select_none_lock2[~select_none_lock2['lock_codes']]['sku'].unique())\n",
+    "    bose_err_list = list(bose_err_list.intersection(bose_err_list2))\n",
+    "    bose_err_list = list(set(bose_err_list))\n",
+    "    return bose_err_list\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 462/462 [00:11<00:00, 39.02it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bose_inv = load_data('COSTASHHTS');bose_inv\n",
-    "snapshot()"
+    "# bose_inv = load_data('COSTASHHTS');bose_inv\n",
+    "# snapshot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -242,8 +290,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===============================this_code: =================================\n",
-      "\n",
+      "=========================================(blocked)==================================================\n",
+      "===============================this_code: (blocked)=================================\n",
+      "(blocked)\n",
       "['COSTASHHTS']\n"
      ]
     },
@@ -251,14 +300,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 462/462 [00:14<00:00, 31.52it/s]\n",
-      " 33%|███▎      | 1/3 [00:15<00:30, 15.44s/it]"
+      "100%|██████████| 462/462 [00:19<00:00, 24.01it/s]\n",
+      " 33%|███▎      | 1/3 [00:19<00:39, 19.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "========================================(QH|27|QI)==================================================\n",
       "===============================this_code: (QH|27|QI)=================================\n",
       "(QH|27|QI)\n",
       "['HPPXXWHWDS']\n"
@@ -268,16 +318,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 230/230 [00:06<00:00, 35.47it/s]\n",
-      " 67%|██████▋   | 2/3 [00:22<00:10, 10.43s/it]"
+      "100%|██████████| 230/230 [00:08<00:00, 27.80it/s]\n",
+      " 67%|██████▋   | 2/3 [00:28<00:13, 13.40s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "===============================this_code: (QH|27|QI)=================================\n",
-      "(QH|27|QI)\n",
+      "===============================(BLOCKED_TH|RETURN)==================================================\n",
+      "===============================this_code: (BLOCKED_TH|RETURN)=================================\n",
+      "(BLOCKED_TH|RETURN)\n",
       "['MICHETCTGS']\n"
      ]
     },
@@ -285,98 +336,77 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 635/635 [00:17<00:00, 36.17it/s]\n",
-      "100%|██████████| 3/3 [00:40<00:00, 13.56s/it]\n"
+      "100%|██████████| 635/635 [00:30<00:00, 21.08it/s]\n",
+      "100%|██████████| 3/3 [01:00<00:00, 20.00s/it]\n"
      ]
     }
    ],
    "source": [
-    "out_df = pd.DataFrame()\n",
     "\n",
-    "for ou_code0 in tqdm(df['ou_code'].unique()):\n",
+    "out_df = pd.DataFrame()\n",
+    "for ou_code0 in df['ou_code'].unique():\n",
     "\n",
     "    bose_inv = load_data(ou_code0)\n",
-    "    print(code)\n",
+    "    \n",
+    "    print('{note:=>50}'.format(note=ou_code0) + '{note:=>50}'.format(note=''))\n",
+    "    print(\"===============================this_code: %s=================================\"%code)\n",
     "    print(bose_inv['ou_code'].unique())\n",
+    "    print(\"===============================this_code: %s=================================\"%bose_inv['ou_code'].unique())\n",
+    "\n",
+    "\n",
     "    df0 = pd.DataFrame()\n",
     "    snapshot()\n",
-    "\n",
-    "\n",
-    "    def err_part():\n",
-    "        \"\"\"\n",
-    "        findout who are the naught peach.\n",
-    "        err 中干掉了 new 干掉了maylock \n",
-    "        \"\"\"\n",
-    "        df_err = df0[df0['mark'] != 'new']\n",
-    "        # 补充可能被锁的标记\n",
-    "        # df_err['mark'] = df_err['mark'].where(df_err.iloc[:, 0:8].fillna(0).nunique(axis = 1) > 1, 'may_lock')\n",
-    "        # 干掉了maylock\n",
-    "        df_err = df_err[df_err['mark'] != 'may_lock'].sort_values(['sku', 'received_date'])\n",
-    "        df_err['change'] = df_err.iloc[:,0:scan_len].diff(axis = 1).sum(axis = 1)\n",
-    "        shift = df_err.groupby(['sku', 'wms_warehouse_id']).shift(1) \n",
-    "        shift = shift[['mark','change']]\n",
-    "        shift.columns = ['lag_mark', 'lag_change']\n",
-    "        shift['lag_mark'] = shift['lag_mark'].where(~shift['lag_mark'].isna(), 'clear')\n",
-    "        df_err = pd.concat([df_err, shift], axis = 1)\n",
-    "        return df_err\n",
-    "\n",
     "    df_err = err_part()\n",
     "\n",
-    "    def output(df_err, df0):\n",
-    "        dishes = list(df_err[(df_err['lag_mark'] != 'clear') \\\n",
-    "            & (df_err['change'] < 0)\n",
-    "            & (df_err['change'] != df_err['lag_change'])]['sku'].unique())\n",
-    "        return df0[df0['sku'].isin(dishes)]\n",
-    "\n",
-    "    def check(sku, df0):\n",
-    "        a = df0[df0['sku'].isin(sku)].sort_values(['sku','received_date'])\n",
-    "        return a \n",
-    "\n",
     "    view = output(df_err, df0)\n",
-    "\n",
-    "    def ou_level_lock_codes(lock_code_to_eliminate):\n",
-    "        \"\"\"\n",
-    "        正则. lock_code 需要被排除的, 依赖view表格. \n",
-    "        \"\"\"\n",
-    "        # output(df_err_bose,df0_bose)['sku'].unique()\n",
-    "        select_none_lock  = pd.DataFrame(\n",
-    "            view.groupby('sku')['mark'].apply(list).astype(str).str.match('.+may')\n",
-    "            ).reset_index()\n",
-    "        select_none_lock2 = pd.DataFrame(\n",
-    "            view.groupby('sku')['lock_codes'].apply(list).astype(str).str.match('.+'+lock_code_to_eliminate)\n",
-    "            ).reset_index()\n",
-    "        # 去重    \n",
-    "        bose_err_list = set(select_none_lock[~select_none_lock['mark']]['sku'].unique())\n",
-    "        bose_err_list2 = list(select_none_lock2[~select_none_lock2['lock_codes']]['sku'].unique())\n",
-    "        bose_err_list = list(bose_err_list.intersection(bose_err_list2))\n",
-    "        bose_err_list = list(set(bose_err_list))\n",
-    "        return bose_err_list\n",
-    "\n",
-    "\n",
-    "\n",
     "    bose_err_list = ou_level_lock_codes(code)\n",
     "    bose_definite_wrong = check(bose_err_list, df0)\n",
-    "    out_df = pd.concat([out_df, bose_definite_wrong], axis = 0)"
+    "    out_df = pd.concat([out_df, bose_definite_wrong], axis = 0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['HPPXXWHWDS', 'MICHETCTGS'], dtype=object)"
+       "array(['COSTASHHTS', 'HPPXXWHWDS', 'MICHETCTGS'], dtype=object)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "out_df['ou_code'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# out_df[out_df['ou_code'] == 'COSTASHHTS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_df['lock_codes'].unique()"
    ]
   },
   {
