--- a/inv_fifo.ipynb
+++ b/inv_fifo.ipynb
@@ -708,97 +708,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>20211203</th>\n",
-       "      <th>20211210</th>\n",
-       "      <th>20211217</th>\n",
-       "      <th>received_date</th>\n",
-       "      <th>sku</th>\n",
-       "      <th>mark</th>\n",
-       "      <th>lock_codes</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>fifo_fefo</th>\n",
-       "      <th>location</th>\n",
-       "      <th>ou_code</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
-       "      <td>50.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2022-01-06</td>\n",
-       "      <td>COSTA020760</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>{D-115-05-03-A, SHIP-01}</td>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>1003.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2022-01-13</td>\n",
-       "      <td>COSTA020760</td>\n",
-       "      <td>clear</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>{D-115-05-03-A, SHIP-01}</td>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     20211203  20211210  20211217 received_date          sku   mark  \\\n",
-       "111      50.0      10.0       0.0    2022-01-06  COSTA020760  clear   \n",
-       "112    1003.0       0.0       0.0    2022-01-13  COSTA020760  clear   \n",
-       "\n",
-       "    lock_codes wms_warehouse_id fifo_fefo                  location  \\\n",
-       "111  Available         COSTA_SH      fefo  {D-115-05-03-A, SHIP-01}   \n",
-       "112  Available         COSTA_SH      fefo  {D-115-05-03-A, SHIP-01}   \n",
-       "\n",
-       "        ou_code  \n",
-       "111  COSTASHHTS  \n",
-       "112  COSTASHHTS  "
+       "['D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A,SHIP-01',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-115-05-03-A',\n",
+       " 'D-02-33-04,SHIP-01',\n",
+       " 'D-01-04-01',\n",
+       " 'D-01-30-01',\n",
+       " 'D-07-08-02,SHIP-01',\n",
+       " 'D-07-03-01',\n",
+       " 'G-1-01-A-01',\n",
+       " 'D-07-08-02,D-07-10-02,SHIP-01',\n",
+       " 'SHIP-01,D-06-28-01-A',\n",
+       " 'D-06-12-01',\n",
+       " 'D-06-03-01-A',\n",
+       " 'D-04-18-05',\n",
+       " 'D-04-23-04,D-04-21-04',\n",
+       " 'D-04-32-05',\n",
+       " 'D-04-23-04,D-04-18-05,SHIP-01,D-04-21-04',\n",
+       " 'D-04-16-05,D-04-12-03,SHIP-01,D-04-22-04,D-04-14-04',\n",
+       " 'D-07-06-02,SHIP-01',\n",
+       " 'D-07-12-05',\n",
+       " 'D-07-01-02',\n",
+       " 'B-04-18-07,SHIP-01',\n",
+       " 'B-04-16-01,SHIP-01',\n",
+       " 'B-04-18-07',\n",
+       " 'B-04-18-01',\n",
+       " 'B-04-14-06',\n",
+       " 'B-04-16-04,SHIP-01',\n",
+       " 'B-04-18-05',\n",
+       " 'C-1-19-A-06,SHIP-01',\n",
+       " 'C-1-19-A-06',\n",
+       " 'C-1-19-A-06',\n",
+       " 'C-1-19-A-06',\n",
+       " 'SHIP-01',\n",
+       " 'D-06-08-03,SHIP-01',\n",
+       " 'D-04-20-05',\n",
+       " 'D-06-08-03',\n",
+       " 'B-05-50-1,B-03-46-C',\n",
+       " 'C-15-10-3,C-15-11-3,C-15-09-3',\n",
+       " 'B-15-04-4,B-04-38-1,B-15-05-4,B-15-09-4,B-15-08-4,B-15-06-4,B-15-07-4',\n",
+       " 'C-05-01-3,A-16-13-3,C-05-02-3,A-16-14-3',\n",
+       " 'B-15-12-3,B-15-03-3,B-15-22-3,B-15-23-3,B-15-02-3,B-15-21-3,B-15-13-3,B-15-20-3,B-15-04-3,B-15-09-3,B-15-18-3,B-15-17-3,B-15-07-3,B-15-11-3,B-15-08-3,B-15-16-3,B-15-01-3,B-15-05-3,B-15-10-3,B-15-06-3,B-15-19-3',\n",
+       " 'C-01-07-3,C-01-04-3,C-02-02-3,C-01-02-3,C-01-08-3,C-01-10-3,C-01-14-3,C-02-06-3,C-01-01-3,C-01-13-3,C-01-05-3,C-01-03-3,C-01-11-3,C-01-06-3,C-02-04-3,C-01-15-3,C-02-05-3,C-02-01-3,C-01-12-3,C-01-09-3,C-02-03-3',\n",
+       " 'B-14-34-3,B-14-28-3,B-14-03-3,B-16-04-3,C-03-08-3,B-14-04-3,B-14-07-3,C-02-11-3,C-08-03-3,C-08-19-3,C-03-12-3,B-16-21-3,C-08-04-3,C-08-14-3,B-14-32-3,C-03-01-3,B-14-30-3,C-03-10-3,B-14-15-3,C-03-03-3,B-16-16-3,C-03-02-3,B-14-01-3,C-08-08-3,B-14-31-3,C-03-07-3,C-02-07-3,B-16-24-3,B-14-09-3,B-16-22-3,C-08-16-3,C-02-10-3,B-16-14-3,B-14-13-3,C-08-20-3,B-16-08-3,B-16-06-3,B-14-12-3,B-16-07-3,C-08-11-3,B-16-10-3,C-08-07-3,C-08-09-3,C-02-08-3,C-08-01-3,C-03-06-3,B-16-09-3,C-08-10-3,B-16-11-3,B-14-05-3,B-14-29-3,B-16-03-3,C-08-05-3,C-08-06-3,C-03-11-3,B-14-35-3,C-03-04-3,B-14-06-3,C-08-12-3,B-16-15-3,C-08-02-3,B-14-02-3,B-16-05-3,C-08-13-3,C-08-17-3,B-16-13-3,B-14-33-3,C-03-09-3,C-02-09-3,B-16-17-3,B-14-14-3,B-16-02-3,C-03-05-3,C-08-15-3,B-16-12-3,B-14-08-3,B-16-23-3,C-08-18-3,B-16-01-3,C-08-21-3',\n",
+       " 'C-05-11-3,C-04-05-3,C-06-01-3,B-16-34-3,C-05-03-3,C-04-06-3,C-05-04-3,C-05-10-3,B-16-40-3,C-05-05-3,B-15-26-3,C-04-02-3,B-16-31-3,C-05-06-3,B-16-38-3,C-05-08-3,B-16-32-3,C-04-11-3,B-16-33-3,C-04-10-3,B-16-29-3,B-15-27-3,B-16-26-3,B-16-39-3,C-05-07-3,B-15-38-3,C-04-08-3,B-16-25-3,C-05-09-3,B-16-28-3,B-15-25-3,B-16-37-3,B-16-30-3,C-04-04-3,C-04-03-3,B-16-35-3,B-16-27-3,B-16-36-3,B-15-24-3,C-04-01-3,C-04-07-3,C-04-09-3,B-15-28-3',\n",
+       " 'B-15-38-3',\n",
+       " 'K006,K003,K050,K011,K005,K009,K016,K001,K017,K002,K055,K014,K015,K054,K018,K012,K048,K052,K053,K056,K047,K004,K051,K010,K013,K008,K049',\n",
+       " 'F020,K027,F027,F031,K034,K036,K045,F034,K026,F016,F018,K042,F029,F028,F024,K032,F026,K041,K037,K025,F036,K038,F033,F019,K031,F035,K044,F022,F032,F023,F030,F025,K033,K040,F017,K028,K030,K039,K035,K029,K043,F021',\n",
+       " 'A-13-41-3,A-16-52-3,A-16-50-3,A-16-42-3,A-16-46-3,A-16-45-3,A-13-40-3,A-16-41-3,A-13-44-3,A-16-49-3,A-13-39-3,A-13-42-3,A-16-40-3,A-13-38-3,A-16-39-3,A-16-43-3,A-13-43-3,A-16-47-3,A-16-51-3,A-16-48-3,A-16-44-3',\n",
+       " 'C-01-07-3,C-06-05-3,C-01-04-3,C-07-04-3,C-02-02-3,C-01-02-3,C-07-02-3,C-01-08-3,C-01-10-3,C-03-07-3,C-03-06-3,C-06-03-3,C-01-14-3,C-02-06-3,C-01-01-3,C-01-13-3,C-01-05-3,C-01-03-3,C-01-11-3,C-03-05-3,C-01-06-3,C-02-04-3,C-01-15-3,C-02-05-3,C-02-01-3,C-01-12-3,C-06-10-3,C-06-07-3,C-06-04-3,C-07-01-3,C-01-09-3,C-03-01-3,C-06-09-3,C-07-03-3,C-03-03-3,C-02-03-3,C-06-02-3,C-06-11-3,C-06-06-3,C-03-04-3,C-03-02-3,C-06-08-3',\n",
+       " 'C-07-08-3,C-02-30-3,A-15-29-3,A-16-11-3,B-14-20-3,A-10-50-3,C-02-27-3,C-02-31-3,C-02-23-3,B-03-12-3,A-13-37-3,B-03-37-3,C-07-06-3,C-02-26-3,C-07-10-3,A-10-47-3,B-09-32-3,C-02-21-3,B-08-11-3,A-10-49-3,B-03-36-3,A-15-25-3,B-03-38-3,A-10-52-3,C-05-01-3,C-02-25-3,A-10-48-3,A-16-08-3,B-14-16-3,A-16-09-3,A-15-01-3,A-10-53-3,C-07-11-3,B-14-10-3,A-16-38-3,A-10-54-3,C-02-28-3,B-14-17-3,B-14-22-3,B-03-35-3,A-10-51-3,B-08-14-3,C-05-02-3,B-06-10-3,C-02-22-3,C-07-09-3,A-09-12-3,C-02-29-3,B-08-10-3,B-06-09-3,C-07-05-3,B-14-11-3,B-14-36-3,C-02-32-3,C-07-07-3,A-16-10-3,B-06-11-3,B-03-13-3,A-14-16-3,A-09-13-3,C-02-24-3,B-14-26-3,A-14-15-3',\n",
+       " 'A-06-07-1,A-06-30-1,A-12-46-1,A-06-19-1,A-12-43-1,A-06-11-1,A-06-23-1,A-06-15-1,A-06-24-1,A-13-39-1,A-12-42-1,A-06-21-1,A-06-16-1,A-06-31-1,A-06-13-1,A-13-50-1,A-12-48-1,A-06-26-1,A-12-47-1,A-06-14-1,A-06-12-1,A-14-41-1,A-12-50-1,A-06-28-1,A-13-46-1,A-06-32-1,A-06-25-1,A-14-42-1,A-12-51-1,A-12-45-1,A-06-17-1,A-13-40-1,A-13-47-1,A-06-22-1,A-12-52-1,A-12-49-1,A-13-51-1,A-06-29-1,A-12-44-1,A-13-45-1,A-06-20-1,A-13-44-1',\n",
+       " 'B-02-45-B',\n",
+       " 'B-02-45-B',\n",
+       " 'C-14-47-2',\n",
+       " 'A-08-45-2',\n",
+       " 'B-11-42-2',\n",
+       " 'DHL-B-01-04',\n",
+       " 'B-02-44-B',\n",
+       " 'A-12-48-2',\n",
+       " 'DHL-B-01-02',\n",
+       " 'C-13-47-2,C-13-48-2',\n",
+       " 'C-13-48-2',\n",
+       " 'B-05-53-2',\n",
+       " 'C-03-40-2',\n",
+       " 'C-10-43-2',\n",
+       " 'A-14-47-2,B-02-47-C',\n",
+       " 'SHIP1',\n",
+       " 'B-10-49-2,B-10-50-2',\n",
+       " 'B-03-39-2,B-03-40-2',\n",
+       " 'A-09-48-2,A-09-47-2',\n",
+       " 'B-05-51-2,B-06-42-2,B-06-43-2',\n",
+       " 'B-02-51-A',\n",
+       " 'SHIP1,C-03-46-2',\n",
+       " 'B-03-39-C',\n",
+       " 'B-14-42-2',\n",
+       " 'A-13-45-2',\n",
+       " 'DHL-B-02-03',\n",
+       " 'C-13-47-1',\n",
+       " 'A-15-41-2',\n",
+       " 'B-16-47-2,SHIP1',\n",
+       " 'B-16-46-2',\n",
+       " 'C-01-45-2',\n",
+       " 'C-03-39-2',\n",
+       " 'DHL-A-01-01',\n",
+       " 'A-11-54-2',\n",
+       " 'B-15-44-2',\n",
+       " 'B-02-42-2',\n",
+       " 'A-10-48-2',\n",
+       " 'A-08-52-2',\n",
+       " 'A-11-41-2',\n",
+       " 'B-11-41-1',\n",
+       " 'A-10-53-2,SHIP1',\n",
+       " 'A-10-53-2',\n",
+       " 'DHL-B-01-03',\n",
+       " 'C-07-52-2',\n",
+       " 'C-06-43-2',\n",
+       " 'SHIP1',\n",
+       " 'B-09-38-2',\n",
+       " 'DHL-B-02-01',\n",
+       " 'C-10-42-2,C-10-41-2',\n",
+       " 'C-08-47-2',\n",
+       " 'A-13-43-2,SHIP1',\n",
+       " 'C-12-51-2',\n",
+       " 'A-15-53-2',\n",
+       " 'C-11-47-2',\n",
+       " 'SHIP1',\n",
+       " 'C-15-39-2',\n",
+       " 'C-09-39-2',\n",
+       " 'SCC-09-07-02,SHIP01',\n",
+       " 'F-18-20',\n",
+       " 'SCC-06-08-06,SCC-06-11-06,SCC-06-09-06',\n",
+       " 'EE-19-02,SHIP01',\n",
+       " 'SHIP01,SCC-03-14-05',\n",
+       " 'H-05-15,E-13-14,EE-19-03',\n",
+       " 'SHIP01,D-11-18',\n",
+       " 'DI-01-07',\n",
+       " 'RECV01',\n",
+       " 'WQR03,SHIP01',\n",
+       " 'WQR03,SHIP01',\n",
+       " 'RECV01',\n",
+       " 'J-10-18',\n",
+       " 'SCB-04-14-01',\n",
+       " 'RECV01',\n",
+       " 'C-3-10,B-8-24,A-5-22,A-6-21,B-4-07,C-2-09,SHIP01,C-11-18,B-8-22,C-8-17,A-11-15,B-2-24,B-2-19,C-5-14,B-7-14',\n",
+       " 'SCE-04-04-01',\n",
+       " 'J-09-06',\n",
+       " 'D-10-18',\n",
+       " 'D-7-13,C-10-09-02',\n",
+       " 'B-2-12,B-7-12,C-10-02-04,C-10-03-02,C-10-02-02',\n",
+       " 'WQR04',\n",
+       " 'E-23-18,E-23-19,SHIP01,F-07-23',\n",
+       " 'F-09-08',\n",
+       " 'A-8-11,A-1-28,SHIP01,D-1-16',\n",
+       " 'RECV01',\n",
+       " 'E-22-03',\n",
+       " 'SCE-13-02-01',\n",
+       " 'SHIP01,F-10-05',\n",
+       " 'A-3-09,SHIP01,D-1-18',\n",
+       " 'SCE-04-06-01',\n",
+       " 'J-09-17',\n",
+       " 'G-07-18,SHIP01,WCB04',\n",
+       " 'H-05-15,H-01-12',\n",
+       " 'E-24-16',\n",
+       " 'SCE-16-03-06,SCD-00-01',\n",
+       " 'EC-10-02',\n",
+       " 'E-16-19',\n",
+       " 'SCD-00-01,SHIP01,SCE-28-04-05',\n",
+       " 'H-01-08',\n",
+       " 'H-01-12',\n",
+       " 'H-05-18',\n",
+       " 'E-22-07',\n",
+       " 'SCB-09-11-06',\n",
+       " 'SHIP01,F-12-07',\n",
+       " 'G-12-17,SHIP01,G-16-11,E-14-21',\n",
+       " 'RECV01',\n",
+       " 'C-11-21,A-5-20,WQR03,C-4-15,C-7-19,A-10-20,SHIP01,B-3-25,A-10-11,B-2-25',\n",
+       " 'SCE-04-01-02',\n",
+       " 'F-12-18,F-09-10,F-12-14,G-13-09,H-05-14,F-11-12,F-15-20',\n",
+       " 'SCE-18-05-03,SHIP01',\n",
+       " 'EE-07-02',\n",
+       " 'SCE-13-02-06,SCE-13-01-05,SCE-13-01-02',\n",
+       " 'E-22-05',\n",
+       " 'H-20-09,SHIP01',\n",
+       " 'H-23-17,SHIP01,H-23-14',\n",
+       " 'SCC-13-10-02',\n",
+       " 'SCE-16-05-01',\n",
+       " 'E-13-01',\n",
+       " 'F-10-07',\n",
+       " 'F-18-08',\n",
+       " 'SCE-18-04-01',\n",
+       " 'E-13-04']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out_df.head(2)"
+    "[','.join(i) for i in out_df['location'] ]"
    ]
   },
   {
